no need for orientation class at the moment
implement only if we need symmetry aware operations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,18 +69,14 @@ add_library(ROTATIONS OBJECT "rotations.f90")
 add_dependencies(ROTATIONS LAMBERT QUATERNIONS)
 list(APPEND OBJECTFILES $<TARGET_OBJECTS:ROTATIONS>)
 
-add_library(ORIENTATIONS OBJECT "orientations.f90")
-add_dependencies(ORIENTATIONS ROTATIONS)
-list(APPEND OBJECTFILES $<TARGET_OBJECTS:ORIENTATIONS>)
-
 # SPECTRAL solver and FEM solver use different mesh files
 if (PROJECT_NAME STREQUAL "DAMASK_spectral")
       add_library(MESH OBJECT "mesh.f90")
-      add_dependencies(MESH ORIENTATIONS FEsolving)
+      add_dependencies(MESH ROTATIONS FEsolving)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:MESH>)
 elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
       add_library(FEZoo OBJECT "FEM_zoo.f90")
-      add_dependencies(FEZoo ORIENTATIONS FEsolving)
+      add_dependencies(FEZoo ROTATIONS FEsolving)
       list(APPEND OBJECTFILES $<TARGET_OBJECTS:FEZoo>)
       add_library(MESH  OBJECT "meshFEM.f90")
       add_dependencies(MESH FEZoo)
