some first steps to support debugging with the PGI compiler
norm2 and sum for initialization are not supported yet, need fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -445,6 +445,33 @@ elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
 
   # Additional options
   # -fdefault-integer-8: Use it to set precision to 8 bytes for integer, don't use it for the standard case of pInt=4 (there is no -fdefault-integer-4)
+
+
+###################################################################################################
+# PGI Compiler
+###################################################################################################
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "PGI")
+
+  if (OPTIMIZATION STREQUAL "OFF")
+    set (OPTIMIZATION_FLAGS "-O0"       )
+  elseif (OPTIMIZATION STREQUAL "DEFENSIVE")
+    set (OPTIMIZATION_FLAGS "-O2")
+  elseif (OPTIMIZATION STREQUAL "AGGRESSIVE")
+    set (OPTIMIZATION_FLAGS "-O3")
+  endif ()
+
+
+#------------------------------------------------------------------------------------------------
+# Fine tuning compilation options
+  set (COMPILE_FLAGS "${COMPILE_FLAGS} -Mpreprocess")
+  # preprocessor
+
+  set (STANDARD_CHECK "-Mallocatable=03")
+
+#------------------------------------------------------------------------------------------------
+# Runtime debugging
+  set (DEBUG_FLAGS "${DEBUG_FLAGS} -g")
+  # Includes debugging information in the object module; sets the optimization level to zero unless a -⁠O option is present on the command line
 else ()
   message (FATAL_ERROR "Compiler type (CMAKE_Fortran_COMPILER_ID) not recognized")
 endif ()
