added ASCIItable tests to CI pipelining

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,6 +156,13 @@ Post_AverageDown:
     - master
     - release
 
+Post_ASCIItable:
+  stage: postprocessing
+  script: ASCIItable/test.py
+  except:
+    - master
+    - release
+
 Post_General:
   stage: postprocessing
   script: PostProcessing/test.py
