--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -482,31 +482,37 @@ AbaqusStd:
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT abaqus
-  only:
-    - development
+  except:
+    - master
+    - release
 
 Marc:
   stage: createDocumentation
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT marc
-  only:
-    - development
+  except:
+    - master
+    - release
 
 Spectral:
   stage: createDocumentation
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel $Doxygen
     - $DAMASKROOT/PRIVATE/documenting/runDoxygen.sh $DAMASKROOT spectral
-  only:
-    - development
+  except:
+    - master
+    - release
 
 Processing:
   stage: createDocumentation
   script:
+    - cd $DAMASKROOT/processing/pre
+    - rm 3DRVEfrom2Dang.py abq_addUserOutput.py marc_addUserOutput.py
+    - $DAMASKROOT/PRIVATE/documenting/scriptHelpToWiki.py --debug *.py
     - cd $DAMASKROOT/processing/post
     - rm marc_to_vtk.py vtk2ang.py
-    - $DAMASKROOT/PRIVATE/documenting/scriptHelpToWiki.py --debug \*.py
+    - $DAMASKROOT/PRIVATE/documenting/scriptHelpToWiki.py --debug *.py
   except:
     - master
     - release
