does not exist anymore

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -508,7 +508,7 @@ Processing:
   stage: createDocumentation
   script:
     - cd $DAMASKROOT/processing/pre
-    - rm 3DRVEfrom2Dang.py abq_addUserOutput.py marc_addUserOutput.py
+    - rm abq_addUserOutput.py marc_addUserOutput.py
     - $DAMASKROOT/PRIVATE/documenting/scriptHelpToWiki.py --debug *.py
     - cd $DAMASKROOT/processing/post
     - rm marc_to_vtk.py vtk2ang.py
