using new Orientation class

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -207,7 +207,9 @@ Post_ParaviewRelated:
 
 Post_OrientationConversion:
   stage: postprocessing
-  script: OrientationConversion/test.py
+  script:
+    - OrientationConversion/test.py
+    - OrientationConversion/test2.py
   except:
     - master
     - release
