--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -36,15 +36,14 @@ else:
 # -implicitnone                   assume no implicit types (e.g. i for integer)
 # -standard-semantics             sets standard (Fortran 2008) and some other conventions
 # -assume nostd_mod_proc_name     avoid problems with libraries compiled without that option
-# -real-size 64 -DFLOAT=8         assume size of real to be 8 bytes, matches our definition of pReal
-# -integer-size 32 -DINT=4        assume size of integer to be 4 bytes, matches our definition of pInt
+# -real-size 64                   assume size of real to be 8 bytes, matches our definition of pReal
 
 compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " + 
                    "-I%I -free -O3 -fpp -fopenmp " +
                    "-ftz -diag-disable 5268 " +
                    "-implicitnone -standard-semantics " +
                    "-assume nostd_mod_proc_name " +
-                   "-real-size 64 -integer-size 32 -DFLOAT=8 -DINT=4 " +
+                   "-real-size 64 " +
                    '-DDAMASKVERSION=\\\"%s\\\"'%DAMASKVERSION)
 
 # Abaqus/CAE will generate an input file without parts and assemblies.
