--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,7 @@ stages:
   - prepareAll
   - preprocessing
   - postprocessing
-  - compilePETScIntel
-  - compilePETScGNU
+  - compilePETSc
   - prepareSpectral
   - spectral
   - compileMarc
@@ -216,38 +215,41 @@ Post_OrientationConversion:
 
 ###################################################################################################
 Compile_Spectral_Intel:
-  stage: compilePETScIntel
+  stage: compilePETSc
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - SpectralAll_compile/test.py
+    - cp -r SpectralAll_compile SpectralAll_compile_Intel
+    - SpectralAll_compile_Intel/test.py
   except:
     - master
     - release
 
 Compile_FEM_Intel:
-  stage: compilePETScIntel
+  stage: compilePETSc
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - FEM_compile/test.py
+    - cp -r FEM_compile FEM_compile_Intel
+    - FEM_compile_Intel/test.py
   except:
     - master
     - release
 
-###################################################################################################
 Compile_Spectral_GNU:
-  stage: compilePETScGNU
+  stage: compilePETSc
   script:
     - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
-    - SpectralAll_compile/test.py
+    - cp -r SpectralAll_compile SpectralAll_compile_GNU
+    - SpectralAll_GNU/test.py
   except:
     - master
     - release
 
 Compile_FEM_GNU:
-  stage: compilePETScGNU
+  stage: compilePETSc
   script:
     - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
-    - FEM_compile/test.py
+    - cp -r FEM_compile FEM_compile_GNU
+    - FEM_compile_GNU/test.py
   except:
     - master
     - release
