--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -239,7 +239,7 @@ Compile_Spectral_GNU:
   script:
     - module load $GNUCompiler $MPICH_GNU $PETSc_MPICH_GNU
     - cp -r SpectralAll_compile SpectralAll_compile_GNU
-    - SpectralAll_GNU/test.py
+    - SpectralAll_compile_GNU/test.py
   except:
     - master
     - release
