testing restart in parallel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -353,11 +353,11 @@ Spectral_MPI:
     - master
     - release
 
-SpectralAll_restartMPI:
+grid_all_restartMPI:
   stage: spectral
   script:
     - module load $IntelCompiler $MPICH_Intel $PETSc_MPICH_Intel
-    - SpectralAll_restartMPI/test.py
+    - grid_all_restartMPI/test.py
   except:
     - master
     - release
