--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -11,11 +11,8 @@
 # Compile_cpp and link_exe for Abaqus make utility.
 #
 import os, re, glob, driverUtils
-from damask import version as DAMASKVERSION
-from damask import Environment
-myEnv = Environment()
 
-if myEnv.options['DAMASK_HDF5'] == 'ON':
+if false:
   # use hdf5 compiler wrapper in $PATH
   fortCmd   = os.popen('h5fc -shlib -show').read().replace('\n','')                                 # complicated way needed to pass in DAMASKVERSION string
   link_sl  += fortCmd.split()[1:]
@@ -44,7 +41,7 @@ compile_fortran = (fortCmd + " -c -fPIC -auto -shared-intel " +
                    "-implicitnone -standard-semantics " +
                    "-assume nostd_mod_proc_name " +
                    "-real-size 64 " +
-                   '-DDAMASKVERSION=\\\"%s\\\"'%DAMASKVERSION)
+                   '-DDAMASKVERSION=\\\"n/a\\\"')
 
 # Abaqus/CAE will generate an input file without parts and assemblies.
 cae_no_parts_input_file=ON
@@ -57,6 +54,3 @@ ask_delete=OFF
 
 # Remove the temporary names from the namespace
 del fortCmd
-del Environment
-del myEnv
-del DAMASKVERSION
