False is capitalized in Python

--- a/installation/mods_Abaqus/abaqus_v6.env
+++ b/installation/mods_Abaqus/abaqus_v6.env
@@ -12,7 +12,7 @@
 #
 import os, re, glob, driverUtils
 
-if false:
+if False:
   # use hdf5 compiler wrapper in $PATH
   fortCmd   = os.popen('h5fc -shlib -show').read().replace('\n','')                                 # complicated way needed to pass in DAMASKVERSION string
   link_sl  += fortCmd.split()[1:]
