c/a ratio matches the lattice_init name

--- a/examples/ConfigFiles/Phase_Phenopowerlaw_Magnesium.config
+++ b/examples/ConfigFiles/Phase_Phenopowerlaw_Magnesium.config
@@ -14,7 +14,7 @@ elasticity            hooke
 (output)                resolvedstress_twin
 
 lattice_structure       hex
-covera_ratio            1.62350                          # from Tromans 2011, Elastic Anisotropy of HCP Metal Crystals and Polycrystals
+c/a                     1.62350                          # from Tromans 2011, Elastic Anisotropy of HCP Metal Crystals and Polycrystals
 c11                     59.3e9                           #  - " -
 c33                     61.5e9                           #  - " -
 c44                     16.4e9                           #  - " -
