atol_shear and atol_twinfrac are not allowed to be zero

--- a/examples/ConfigFiles/Phase_Phenopowerlaw_Magnesium.config
+++ b/examples/ConfigFiles/Phase_Phenopowerlaw_Magnesium.config
@@ -46,9 +46,8 @@ interaction_twinslip    1 1 1 1 1 1 1 1 1 1   1 1 1 1 1 1 1 1 1 1    1 1 1 1    
 # open for discussion
 ####################################################
 atol_resistance         1
-atol_shear              0
-atol_twinfrac           0
-
+atol_shear              1e-6
+atol_twinfrac           1e-6
 n_twin                  20
 n_slip                  20
 
