--- a/installation/mods_Abaqus/abaqus_v6_debug.env
+++ b/installation/mods_Abaqus/abaqus_v6_debug.env
@@ -16,7 +16,7 @@ if False:
   # use hdf5 compiler wrapper in $PATH
   fortCmd   = os.popen('h5fc -shlib -show').read().replace('\n','')                                 # complicated way needed to pass in DAMASKVERSION string
   link_sl  += fortCmd.split()[1:]
-  fortCmd  +=" -DDAMASKHDF5"
+  fortCmd  +=" -DDAMASK_HDF5"
 else:
   # Use the version in $PATH
   fortCmd = "ifort"
