adapting to new keywords

--- a/examples/ConfigFiles/Homogenization_Isostrain_Parallel3.config
+++ b/examples/ConfigFiles/Homogenization_Isostrain_Parallel3.config
@@ -1,4 +1,4 @@
 [Parallel3]
-type	isostrain
-Ngrains	3
-mapping	sum		# or 'parallel'
+mech	        isostrain
+nconstituents	3
+mapping	        sum		# or 'parallel'
