--- a/examples/ConfigFiles/Homogenization_RGC_8Grains.config
+++ b/examples/ConfigFiles/Homogenization_RGC_8Grains.config
@@ -1,7 +1,7 @@
 [8Grains]
-type			RGC
-Ngrains			8
-clustersize		2	2	2        # product of these numbers must be equal to Ngrains(!)
+mech		    RGC
+nconstituents	8
+clustersize		2	2	2        # product of these numbers must be equal to nconstituents(!)
 clusterorientation	0.0	0.0	0.0      # orientation of cluster in terms of zxz Euler-angles in degree (random if not present)
 # clusterorientation	0.0	26.57	0.0      # [012]
 # clusterorientation	0.0	45.00	0.0      # [011]
