--- a/examples/SpectralMethod/Polycrystal/material.config
+++ b/examples/SpectralMethod/Polycrystal/material.config
@@ -30,11 +30,20 @@ plasticity              phenopowerlaw
 (output)                resistance_slip
 (output)                shearrate_slip
 (output)                resolvedstress_slip
-(output)                totalshear
+(output)                accumulatedshear_slip
 (output)                resistance_twin
 (output)                shearrate_twin
 (output)                resolvedstress_twin
-(output)                totalvolfrac
+(output)                accumulatedshear_twin
+
+# only for HDF5 out
+(output) orientation    # quaternion
+(output) f              # deformation gradient tensor; synonyms: "defgrad"
+(output) fe             # elastic deformation gradient tensor
+(output) fp             # plastic deformation gradient tensor
+(output) p              # first Piola-Kichhoff stress tensor; synonyms: "firstpiola", "1stpiola"
+(output) lp             # plastic velocity gradient tensor
+
 
 lattice_structure       fcc
 Nslip                   12   # per family
