allow standard CMAKE way of setting install directory
- DAMASK_BIN in config has no effect anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,11 +106,11 @@ set (CMAKE_C_COMPILER       "${PETSC_MPICC}")
 
 # DAMASK solver defines project to build
 if (DAMASK_SOLVER STREQUAL "GRID")
-    project (DAMASK_grid Fortran C)
+    project (damask-grid Fortran C)
     add_definitions (-DGrid)
     message ("Building Grid Solver\n")
 elseif (DAMASK_SOLVER STREQUAL "FEM")
-    project (DAMASK_FEM Fortran C)
+    project (damask-mesh Fortran C)
     add_definitions (-DFEM)
     message ("Building FEM Solver\n")
 else ()
@@ -155,22 +155,6 @@ endif ()
 if (CMAKE_BUILD_TYPE STREQUAL "SYNTAXONLY")
     set (BUILDCMD_POST "${BUILDCMD_POST} -fsyntax-only")
 endif ()
-
-# Parse DAMASK_BIN from CONFIG file
-file (READ "CONFIG" CONFIGFILE)
-string (REGEX REPLACE ";"  "\\\\;" CONFIGFILE "${CONFIGFILE}")
-string (REGEX REPLACE "\n" ";"     CONFIGFILE "${CONFIGFILE}")
-foreach (item ${CONFIGFILE})
-  string (REGEX MATCH ".+DAMASK_BIN.+" item ${item})
-    if (item)
-      string (REGEX REPLACE "set" "" item "${item}")
-      string (REGEX REPLACE "="  " " item "${item}")
-      string (REGEX REPLACE "\\\${DAMASK_ROOT}" "${PROJECT_SOURCE_DIR}" item "${item}")
-      string (REPLACE "DAMASK_BIN" ";" STRING_LIST ${item})
-      list (GET STRING_LIST 1 item)
-      string (STRIP "${item}" CMAKE_INSTALL_PREFIX)
-    endif ()
-endforeach(item ${CONFIGFILE})
 
 # Parse DAMASK version from VERSION file
 find_program (CAT_EXECUTABLE NAMES cat)
@@ -490,10 +474,10 @@ if (CMAKE_BUILD_TYPE STREQUAL "SYNTAXONLY")
    exec_program (mktemp ARGS -d OUTPUT_VARIABLE black_hole)
    install (PROGRAMS ${nothing} DESTINATION ${black_hole})
 else ()
-   if (PROJECT_NAME STREQUAL "DAMASK_grid")
+   if (PROJECT_NAME STREQUAL "damask-grid")
        install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/DAMASK_spectral
                 DESTINATION ${CMAKE_INSTALL_PREFIX})
-   elseif (PROJECT_NAME STREQUAL "DAMASK_FEM")
+   elseif (PROJECT_NAME STREQUAL "damask-mesh")
        install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/DAMASK_FEM
                 DESTINATION ${CMAKE_INSTALL_PREFIX})
    endif ()
