more standard way of installing executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -474,11 +474,10 @@ if (CMAKE_BUILD_TYPE STREQUAL "SYNTAXONLY")
    exec_program (mktemp ARGS -d OUTPUT_VARIABLE black_hole)
    install (PROGRAMS ${nothing} DESTINATION ${black_hole})
 else ()
+   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
    if (PROJECT_NAME STREQUAL "damask-grid")
-       install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/DAMASK_spectral
-                DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+       install (TARGETS DAMASK_spectral RUNTIME)
    elseif (PROJECT_NAME STREQUAL "damask-mesh")
-       install (PROGRAMS    ${PROJECT_BINARY_DIR}/src/DAMASK_FEM
-                DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+       install (TARGETS DAMASK_FEM RUNTIME)
    endif ()
 endif ()
